# ecigius

./: .gitignore  README.md  cli.py  core.py  ecg_derivatives.py  ecg_fa_10s_20260321_162024.csv  ecg_fa_10s_20260327_193145.csv  ecg_fa_10s_20260327_193525.csv  ecg_normal_10s_20260327_193342.csv  ecg_normal_10s_20260327_193515.csv  ecg_normal_30s_20260321_162034.csv  fetch_mitbih.py  generate_ecg.py  main.py  pyproject.toml  tui.py
