[project]
name = "ecigius-workspace"
version = "0.1.0"
requires-python = ">=3.10"
# Adicionamos os pacotes locais como dependências da raiz
dependencies = [
    "ecigius-core",
    "ecigius-cli",
    "ecigius-tui",
    "fastdtw>=0.3.4",
    "wfdb>=4.3.1",
]

[tool.uv.workspace]
members = ["packages/*"]

# Avisamos ao uv que essas dependências devem ser puxadas do próprio workspace
[tool.uv.sources]
ecigius-core = { workspace = true }
ecigius-cli = { workspace = true }
ecigius-tui = { workspace = true }
